; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/priyadi/extr_......handwiredpromethiumkeymapspriyadikeymap.c_turn_off_capslock.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/priyadi/extr_......handwiredpromethiumkeymapspriyadikeymap.c_turn_off_capslock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@capslock = common dso_local global i64 0, align 8
@KC_CAPS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @turn_off_capslock() #0 {
  %1 = load i64, i64* @capslock, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load i32, i32* @KC_CAPS, align 4
  %5 = call i32 @register_code(i32 %4)
  %6 = load i32, i32* @KC_CAPS, align 4
  %7 = call i32 @unregister_code(i32 %6)
  br label %8

8:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @register_code(i32) #1

declare dso_local i32 @unregister_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
